--- a/ng-demos/ng-demo-07/index7.html
+++ b/ng-demos/ng-demo-07/index7.html
@@ -1,12 +1,13 @@
 ﻿<!DOCTYPE html>
 <html ng-app="app">
 <head>
-    <title>Estruturando a aplicação {{ title }}</title>
+    <title>Módulos</title>
 	<meta charset="utf-8" />
     <link href="../content/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <div class="container" ng-controller="MeuCtrl">
+        <h1>{{ title }}</h1>
     </div>
 
     <script src="../Scripts/angular.min.js"></script>
