--- a/ng-demos/ng-demo-06/404.html
+++ b/ng-demos/ng-demo-06/404.html
@@ -1,1 +1,4 @@
 ﻿<h1 class="text-center"><em>Página não Encontrada</em></h1>
+<hr />
+<pre>$route.current.templateUrl = {{$route.current.templateUrl}}</pre>
+<pre>$location.path() = {{$location.path()}}</pre>
