--- a/ng-demos/ng-demo-06/index6.html
+++ b/ng-demos/ng-demo-06/index6.html
@@ -7,15 +7,16 @@
 
     <link href="../content/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="../content/themes/bootstrap-superhero.min.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../content/imagem/favicon-16x16.png">
 </head>
 <body>
     <div class="container">
         <div ng-view></div>
     </div>
-
-    <script src="../Scripts/angular.min.js"></script>
+    
     <script src="../Scripts/jquery-3.1.1.min.js"></script>
     <script src="../Scripts/bootstrap.min.js"></script>
+    <script src="../Scripts/angular.min.js"></script>
     <script src="../Scripts/angular-route.min.js"></script>
     <script src="../Scripts/angular-animate.min.js"></script>
 
