--- a/ng-demos/ng-demo-06/index6.html
+++ b/ng-demos/ng-demo-06/index6.html
@@ -21,6 +21,7 @@
     <script src="../Scripts/angular-animate.min.js"></script>
 
     <script src="app/app.js"></script>
+    <script src="app/repositories/CustomerRepository.js"></script>
     <script src="app/areas/home/controllers/HomeCtrl.js"></script>
 </body>
 </html>
