--- a/ng-demos/ng-demo-06/index6.html
+++ b/ng-demos/ng-demo-06/index6.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html ng-app="app">
 <head>
-    <title>Estruturando a aplicação {{ title }}</title>
+    <title>Estruturando a aplicação</title>
 	<meta charset="utf-8" />
     <base href="/ng-demo-06/" />
 
